2004-01-31  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/Ancestors.py: Typo.
	* src/plugins/IndivComplete.py: Typo.
	* src/Report.py: Mark translatable string.
	* src/Witness.py: Mark translatable string.
	* src/plugins/FamilyGroup.py: Mark translatable string.

2004-01-31  Egyeki Gergely  <egeri@elte.hu>
	* src/po/hu.po: Updating translation for 1.0-RC

2004-01-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/TransTable.py: make sure returned valued is in unicode format
	* src/plugins/Ancestors.py: fix InverseNameTypesMap problem
	* src/plugins/IndivComplete.py: fix InverseNameTypesMap problem

2004-01-30  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/AncestorChart2.py (write_book_item): 
	Treat unconfigured title. 

2004-01-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PdfDoc.py: fix encoding exception
	* gramps-mdk.spec: Mandrake RPM spec file

2004-01-27  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/ru.po: Minor corrections.

2004-01-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/grampslib_wrap.c: backout mime type search

2004-01-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/usage.xml: Typos.
	* doc/gramps-manual/de/cmdline.xml: Typo and wrong encoding.
	* doc/gramps-manual/ru/usage.xml: Update.

2004-01-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure, configure.in: Typo.

2004-01-24  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/filtref.xml: Update.
	* doc/gramps-manual/fr/gramps-manual.xml: Update.
	* doc/gramps-manual/fr/mainwin.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.

2004-01-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Relationship.py: Check if we run out of defined levels.

2004-01-23  Tino Meinen  <a.t.meinen@chello.nl>
	* src/po/nl.po: Translation for 1.0.0-RC.

2004-01-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/grampslib.i: same fixes as grampslib_wrap.c